--- a/templates/home.html
+++ b/templates/home.html
@@ -1,45 +1,11 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html>
-  <style></style>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'Styles\common.css' %}">
-  </head>
-  <body> 
-    <div class="main-container">
-      <header class="top">
-        <div class="logo-details">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img
-              src="{% static 'Assets\Logo.png' %}"
-              alt="logo"
-              height="80px"
-              width="80px"
-              style="margin: 8px"
-            />
-          </a>
+{% block title %}
+<title>ONGC Home</title>
+{% endblock %}
 
-          <h6 id="tagline">
-            Oil and Natural Gas Corporation Limited
-            <p style="font-size: 12px; color: black">A Maharatna Company</p>
-          </h6>
-        </div>
-
-        <form>
-          <input type="text" placeholder="ElasticSearch" id="elastic-search" />
-          <label for="search"></label>
-        </form>
-      </header>
+{% block content %}
 
       <section>
         <img
@@ -140,32 +106,13 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li><a class="dropdown-item" href="{% url 'view-DLIS' %}">DLIS</a></li>
-                <li><a class="dropdown-item" href="#">LAS</a></li>
+                <li><a class="dropdown-item" href="{% url 'create-LAS' %}">LAS</a></li>
                 <li><a class="dropdown-item" href="#">SEGY</a></li>
               </ul>
             </div>
           </div>
         </div>
       </section>
-      <footer class="bottom">
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-primary">Sitemap</button>
-          <button type="button" class="btn btn-primary">Privacy Policy</button>
-          <button type="button" class="btn btn-primary">Terms of Use</button>
-          <button type="button" class="btn btn-primary">Disclaimer</button>
-        </div>
-
-        <p>
-          Copyright © Oil and Natural Gas Corporation Limited, All Rights
-          Reserved.
-        </p>
-      </footer>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
-    
-  </body>
-</html>
+
+{% endblock %}
