--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,22 +1,30 @@
-        <footer class="bottom">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary">Sitemap</button>
-                <button type="button" class="btn btn-primary">Privacy Policy</button>
-                <button type="button" class="btn btn-primary">Terms of Use</button>
-                <button type="button" class="btn btn-primary">Disclaimer</button>
-            </div>
-
-            <p>
-            Copyright © Oil and Natural Gas Corporation Limited, All Rights
-            Reserved.
-            </p>
-
+        <!-- Footer -->
+        <footer class="bg-light text-dark text-center sticky-bottom">
+            <ul class="nav nav-tabs" style="background-color: #bc987e">
+                <li class="nav-item">
+                    <a class="nav-link footer_links" href="#">Sitemap</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link footer_links" href="#">Privacy Policy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link footer_links" href="#">Terms of Use</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link footer_links" href="">Disclaimer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: black" href=""
+                    >Copyright © Oil and Natural Gas Corporation Limited, All Rights
+                    Reserved.</a
+                    >
+                </li>
+            </ul>
             <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
             ></script>
         </footer>
-
     </body>
 </html>
