navbar improved, webform added to server

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
         <!-- Footer -->
-        <footer class="bg-light text-dark text-center sticky-bottom">
+        <footer class="bg-light text-dark text-center">
             <ul class="nav nav-tabs" style="background-color: #bc987e">
                 <li class="nav-item">
                     <a class="nav-link footer_links" href="#">Sitemap</a>
