added electric-log page to seerver n fixed oilrig images

--- a/mechanical/templates/mechanical/equipment-log.html
+++ b/mechanical/templates/mechanical/equipment-log.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>Web Forms - ONGC</title>
+<title>Equipment Daily Log - ONGC</title>
 {% endblock %}
 
 {% block content %}
