--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -48,7 +48,7 @@
                                 <a class="dropdown-item text-primary" href="#">ONGC</a>
                                 </li>
                                 <li>
-                                <a class="dropdown-item text-primary" href="#">INSPIRA</a>
+                                <a class="dropdown-item text-primary" href="#">About Us</a>
                                 </li>
                                 <li>
                                 <a class="dropdown-item text-primary" href="#">SAS</a>
