improved LAS UI, display algorithm, faster output

--- a/webLog/templates/webLog/view-las.html
+++ b/webLog/templates/webLog/view-las.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-<title>LAS</title>
+<title>{{ column.name }} Chart - LAS</title>
 {% endblock %}
 
 {% block content %}
@@ -10,11 +10,25 @@
     <!-- for symmetry from top to bottom on page I am using a container -->
     <div class="container-sm">
         <div class="row justify-content-around align-items-center text-center py-5">
-            <h1>LAS Charts</h1>
-            {% for png in png_files %}
-            <div class="col-md-4">
-                <img class="img-fluid" src="{% static 'data/science/' %}{{ png }}"/>
+            <h1>{{ column.name }} Chart</h1>
+            <div class="col-md">
+                <img class="img-fluid" src="data:image/png;base64,{{ png_file }}">
             </div>
+
+        </div>
+
+        <div class="row justify-content-around align-items-center text-center py-5">
+            <h1>LAS Links</h1>
+            {% for logcolumn in logcolumns %}
+            {% if logcolumn.name == column.name %}
+            <div class="col-md-2 py-2">
+                <a href="#" class="btn btn-success" role="button" aria-pressed="true">{{ logcolumn.name }}</a>
+            </div>
+            {% else %}
+            <div class="col-md-2 py-2">
+                <a href="{% url 'view-LAS-image' logcolumn.name %} " class="btn btn-outline-success" role="button" aria-pressed="true">{{ logcolumn.name }}</a>
+            </div>
+            {% endif %}
             {% endfor %}
 
         </div>
@@ -22,4 +36,6 @@
 </section>
 
 {% endblock %}
+
+<img class="img-fluid" src="{% static 'data/science/' %}{{ png }}"/>
 
